--- a/index.html
+++ b/index.html
@@ -95,15 +95,15 @@
 </p>
 </div>
 <table> 
-	<tr><td>Genome-wide chromatin accessibility and nucleosome occupancy profiles have been widely investigated, while the long-range dynamics remains poorly studied at the single-cell level. Here we present a new experimental approach MeSMLR-seq (methyltransferase treatment followed by single-molecule long-read sequencing) for long-range mapping of nucleosomes and chromatin accessibility at single DNA molecules, and thus achieve comprehensive-coverage characterization of the corresponding heterogeneity. MeSMLR-seq offers direct measurements of both nucleosome-occupied and nucleosome-evicted regions on a single DNA molecule, which is challenging for many existing methods. We applied MeSMLR-seq to haploid yeast, where single DNA molecules represent single cells, and thus we could investigate the combinatorics of many (up to 356) nucleosomes at long range in single cells. We illustrated the differential organization principles of nucleosomes surrounding the transcription start site for silently- and actively-transcribed genes, at the single-cell level and in the long-range scale. 
+	<tr><td>Genome-wide chromatin accessibility and nucleosome occupancy profiles have been widely investigated, while the long-range dynamics remains poorly studied at the single-cell level. Here we present a new experimental approach MeSMLR-seq (methyltransferase treatment followed by single-molecule long-read sequencing) for long-range mapping of nucleosomes and chromatin accessibility at single DNA molecules, and thus achieve comprehensive-coverage characterization of the corresponding heterogeneity. MeSMLR-seq offers direct measurements of both nucleosome-occupied and nucleosome-evicted regions on a single DNA molecule, which is challenging for many existing methods. We applied MeSMLR-seq to haploid yeast, where single DNA molecules represent single cells, and thus we could investigate the combinatorics of many (up to 356) nucleosomes at long range in single cells. We illustrated the differential organization principles of nucleosomes surrounding the transcription start site for silently- and actively-transcribed genes, at the single-cell level and in the long-range scale... 
 </td>
 	<td><img src="images/Single-mol.png" width="300"></td></tr> 
 </table> 	
 
 <br>
-<div><img src="images/Sciencemag.jpg" width="50" style='float: left;'/>
+<div><img src="images/Sciencemag.jpg" width="55" style='float: left;'/>
  <p><b>EC coupling structural protein junctophilin-2 encodes a stress-adaptive transcription regulator.</b>
-Guo, A., Wang, Y., Chen, B., <b>Wang, Y. </b>,Yuan, J., Zhang, L., Hall, D., Wu, J., Shi, Y., Zhu, Q., Chen, C., Thiel, W.H., 
+<br>Guo, A., Wang, Y., Chen, B., <b>Wang, Y. </b>,Yuan, J., Zhang, L., Hall, D., Wu, J., Shi, Y., Zhu, Q., Chen, C., Thiel, W.H., 
 	Zhan, X., Weiss, R.M, Zhan, F., Musselman, C., Pufall, M., Zhu, W.,<b> Au, K.F. </b>, Hong, J., Anderson, M.E., Grueter, C.E., Song, L.S.
   	<br><i>Science.</i> 2018.  [<a href="https://science.sciencemag.org/content/sci/362/6421/eaan3303.full.pdf">Manuscript</a>]
 </p>
@@ -114,40 +114,56 @@ Guo, A., Wang, Y., Chen, B., <b>Wang, Y. </b>,Yuan, J., Zhang, L., Hall, D., Wu,
 	<td><img src="images/EC-coupling.png" width="300"></td></tr> 
 </table> 		
 	
-	
-<p>
-  <br><b>EC coupling structural protein junctophilin-2 encodes a stress-adaptive transcription regulator.</b><br>
-	Guo, A., Wang, Y., Chen, B., <b>Wang, Y. </b>,Yuan, J., Zhang, L., Hall, D., Wu, J., Shi, Y., Zhu, Q., Chen, C., Thiel, W.H., 
-	Zhan, X., Weiss, R.M, Zhan, F., Musselman, C., Pufall, M., Zhu, W.,<b> Au, K.F. </b>, Hong, J., Anderson, M.E., Grueter, C.E., Song, L.S.
-  <br><img src="images/Sciencemag.jpg" width="35"><i>Science.</i> 2018.  [<a href="https://science.sciencemag.org/content/sci/362/6421/eaan3303.full.pdf">Manuscript</a>]
 <br>
-  </p>
+<div><img src="images/genesMDPI.jpg" width="55" style='float: left;'/>
+ <p><b>A Statistical Method for Observing Personal Diploid Methylomes and Transcriptomes with Single-Molecule Real-Time Sequencing.</b>
+<br>Suzuki, Y., <b> Wang, Y., Au, K.F., </b> Morishita, S. 
+<br><i> Genes.</i> 2018.  [<a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6162384/pdf/genes-09-00460.pdf">Manuscript</a>]
+</p>
+</div>
+<table> 
+	<tr><td>We address the problem of observing personal diploid methylomes, CpG methylome pairs of homologous chromosomes that are distinguishable with respect to phased heterozygous variants (PHVs), which is challenging due to scarcity of PHVs in personal genomes. Single molecule real-time (SMRT) sequencing is promising as it outputs long reads with CpG methylation information, but a serious concern is whether reliable PHVs are available in erroneous SMRT reads with an error rate of ∼15%. To overcome the issue, we propose a statistical model that reduces the error rate of phasing CpG site to 1%, thereby calling CpG hypomethylation in each haplotype with >90% precision and sensitivity. Using our statistical model, we examined GNAS complex locus known for a combination of maternally, paternally, or biallelically expressed isoforms, and observed allele-specific methylation pattern almost perfectly reflecting their respective allele-specific expression status, demonstrating the merit of elucidating comprehensive personal diploid methylomes and transcriptomes.
+</td>
+	<td><img src="images/StatMethod.png" width="300"></td></tr> 
+</table> 	
 	
-	
-<p>
-  <br><b>A Statistical Method for Observing Personal Diploid Methylomes and Transcriptomes with Single-Molecule Real-Time Sequencing.</b><br>
-	Suzuki, Y., <b> Wang, Y., Au, K.F., </b> Morishita, S. 
-  <br><img src="images/genesMDPI.jpg" width="35"><i> Genes.</i> 2018.  [<a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6162384/pdf/genes-09-00460.pdf">Manuscript</a>]
 <br>
-  </p>
-	
+<div><img src="images/heliyon.jpg" width="55" style='float: left;'/>
+ <p><b>Single cell expression analysis of primate-specific retroviruses-derived HPAT lincRNAs in viable human blastocysts identifies embryonic cells co-expressing genetic markers of multiple lineages.</b>
+<br> Glinsky, G., Durruthy-Durruthy, J., Wossidlo, M., Grow, E.J., <b>Weirather, J.L.</b>,<b> Au, K.F.</b>, Wysocka, J., Sebastiano, V.
+<br><i> Heliyon.</i> 2018.  [<a href="https://www.sciencedirect.com/science/article/pii/S2405844017328153">Manuscript</a>]
+</p>
+</div>
+<table> 
+	<tr><td>Chromosome instability and aneuploidies occur very frequently in human embryos, impairing proper embryogenesis and leading to cell cycle arrest, loss of cell viability, and developmental failures in 50–80% of cleavage-stage embryos. This high frequency of cellular extinction events represents a significant experimental obstacle challenging analyses of individual cells isolated from human preimplantation embryos. We carried out single cell expression profiling of 241 individual cells recovered from 32 human embryos during the early and late stages of viable human blastocyst (VHB) differentiation. Classification of embryonic cells was performed solely based on expression patterns of human pluripotency-associated transcripts (HPAT), which represent a family of primate-specific transposable element-derived lincRNAs highly expressed in human embryonic stem cells and regulating nuclear reprogramming and pluripotency induction. We then validated our findings by analyzing transcriptomes of 1,708 individual cells recovered from more than 100 human embryos and 259 mouse cells from more than 40 mouse embryos at different stages of preimplantation embryogenesis... 
+		</td>
+	<td><img src="images/SingleCell.jpg" width="300"></td></tr> 
+</table> 	
 
-<p>
-  <br><b>Single cell expression analysis of primate-specific retroviruses-derived HPAT lincRNAs in viable human blastocysts identifies embryonic cells co-expressing genetic markers of multiple lineages.</b><br>
-  Glinsky, G., Durruthy-Durruthy, J., Wossidlo, M., Grow, E.J., <b>Weirather, J.L.</b>,<b> Au, K.F.</b>, Wysocka, J., Sebastiano, V.
-  <br><img src="images/heliyon.jpg" width="35"><i> Heliyon.</i> 2018.  [<a href="https://www.sciencedirect.com/science/article/pii/S2405844017328153">Manuscript</a>]
 <br>
-  </p>
-
-
-
-<p>
-  <br><b>Revealing tumor heterogeneity of breast cancer by utilizing the linkage between somatic and germline mutations.</b><br>
-  <b>Zou, M., Jin, R., Au, K.F.#</b>
-  <br><i> Briefings in Bioinformatics.</i> 2018. (in press) [<a href="https://www.augroup.org/GenoClone/GenoClone/GenoClone">Link</a>]
-<br><b># Corresponding author</b>
-  </p>
-
+<div><img src="images/BriefingsBioinformatics.png" width="55" style='float: left;'/>
+ <p><b>Revealing tumor heterogeneity of breast cancer by utilizing the linkage between somatic and germline mutations.</b>
+<br><b>Zou, M., Jin, R., Au, K.F.#</b>
+<br><i> Briefings in Bioinformatics.</i> 2018. (in press) [<a href="https://www.sciencedirect.com/science/article/pii/S2405844017328153">Manuscript</a>]
+</p>
+</div>
+<table> 
+	<tr><td>The intra-tumor heterogeneity is associated with cancer progression and therapeutic resistance, such as in breast cancer. While the existing methods for studying tumor heterogeneity only analyze variant allele frequency (VAF), the genotype of variant is also informative for inferring subclones, which can be detected by long reads or paired-end reads. We developed GenoClone to integrate VAF with the genotype of variant innovatively, so it showed superior performance of inferring the number of subclones, estimating the fractions of subclones and identifying somatic single-nucleotide variants composition of subclones. When GenoClone was applied to 389 TCGA breast cancer samples, it revealed extensive intra-tumor heterogeneity. We further found that a few somatic mutations were relevant to the late stage of tumor evolution, including the ones at the oncogene PIK3CA and the tumor suppress gene TP53. Moreover, 52 subclones that were identified from 167 samples shared high similarity of somatic mutations, which were clustered into three groups with the sizes of 24, 14 and 14... 		
+		</td>
+	<td><img src="images/GenoClone.png" width="300"></td></tr> 
+</table> 
+	
+<br>
+<div><img src="images/BioinfoCover.png" width="55" style='float: left;'/>
+ <p><b>IDP-denovo: <i>de novo</i> transcriptome assembly and isoform annotation by hybrid sequencing.</b>
+<br><b>Fu, S.</b>, <b>Ma Y.</b>, Yao, H., Xu, Z., Chen, S., Song, J., <b>Au, K.F.</b>
+<br><i> Briefings in Bioinformatics.</i> Volume 34, Issue 13, 2018, Pages 2168–2176. [<a href="https://academic.oup.com/bioinformatics/advance-article/doi/10.1093/bioinformatics/bty098/4904264">Manuscript</a>]
+</p>
+</div>
+<table> 
+	<tr><td>In the past years, the long read (LR) sequencing technologies, such as Pacific Biosciences and Oxford Nanopore Technologies, have been demonstrated to substantially improve the quality of genome assembly and transcriptome characterization. Compared to the high cost of genome assembly by LR sequencing, it is more affordable to generate LRs for transcriptome characterization. That is, when informative transcriptome LR data are available without a high-quality genome, a method for de novo transcriptome assembly and annotation is of high demand.		</td>
+	<td><img src="images/IDP-denovo.png" width="300"></td></tr> 
+</table> 	
 
 
 <p><span lang=EN style='mso-ansi-language:EN'><br>
