--- a/Publications/Publications.html
+++ b/Publications/Publications.html
@@ -72,7 +72,7 @@
   <br><b>EC coupling structural protein junctophilin-2 encodes a stress-adaptive transcription regulator.</b><br>
 	Guo, A., Wang, Y., Chen, B., <b>Wang, Y. </b>,Yuan, J., Zhang, L., Hall, D., Wu, J., Shi, Y., Zhu, Q., Chen, C., Thiel, W.H., 
 	Zhan, X., Weiss, R.M, Zhan, F., Musselman, C., Pufall, M., Zhu, W.,<b> Au, K.F. </b>, Hong, J., Anderson, M.E., Grueter, C.E., Song, L.S.
-  <br><i> Genes.</i> 2018.  [<a href="https://science.sciencemag.org/content/sci/362/6421/eaan3303.full.pdf">Manuscript</a>]
+  <br><i> Science.</i> 2018.  [<a href="https://science.sciencemag.org/content/sci/362/6421/eaan3303.full.pdf">Manuscript</a>]
 <br>
   </p>
 	
@@ -81,7 +81,7 @@
   <br><b>A Statistical Method for Observing Personal Diploid Methylomes and Transcriptomes with Single-Molecule Real-Time Sequencing.</b><br>
 	Suzuki, Y., <b> Wang, Y., Au, K.F., </b> Morishita, S. 
   <br><i> Genes.</i> 2018.  [<a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6162384/pdf/genes-09-00460.pdf">Manuscript</a>]
-<br>
+<br><b># Co-corresponding author</b>
   </p>
 	  
 
