--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
 <div><img src="images/genesMDPI.jpg" width="55" style='float: left;'/>
  <p><b>A Statistical Method for Observing Personal Diploid Methylomes and Transcriptomes with Single-Molecule Real-Time Sequencing.</b>
 <br>Suzuki, Y., <b> Wang, Y., Au, K.F., </b> Morishita, S. 
+	 <br><b># Co-corresponding author</b>
 <br><i> Genes.</i> 2018.  [<a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6162384/pdf/genes-09-00460.pdf">Manuscript</a>]
 </p>
 </div>
