--- a/IDP/hESC_Data.html
+++ b/IDP/hESC_Data.html
@@ -75,7 +75,7 @@
     <h2>Data from SpliceMap-LSC-IDP pipeline</h2>
     </div>
 
-    <p>This hESC transcriptome iS identified by <a href="http://www.stanford.edu/group/wonglab/SpliceMap/">SpliceMap</a>-<a href="http://www.augroup.org/LSC/">LSC</a>-<a href="http://www.augroup.org/IDP/">IDP</a> pipeline.</p>
+    <p>This hESC transcriptome iS identified by <a href="http://www.stanford.edu/group/wonglab/SpliceMap/">SpliceMap</a>-<a href="http://www.augroup.org/LSC/LSC">LSC</a>-<a href="http://www.augroup.org/IDP/IDP">IDP</a> pipeline.</p>
 
 	
 	
