--- a/LSC/LSC_tutorial.html
+++ b/LSC/LSC_tutorial.html
@@ -755,7 +755,7 @@ EN'>Step 1 - Download and extract LSC<o:p></o:p></span></h3>
 <p><span lang=EN style='mso-ansi-language:EN'>Download the source:<o:p></o:p></span></p>
 
 <p class=MsoNormal style='margin-left:.5in'><span lang=EN style='mso-fareast-font-family:
-"Times New Roman";mso-ansi-language:EN'><a href="LSC_download.asp"><span
+"Times New Roman";mso-ansi-language:EN'><a href="LSC_download.html"><span
 class=GramE><b>download</b></span><b> LSC</b></a> <o:p></o:p></span></p>
 
 <p><span lang=EN style='mso-ansi-language:EN'>Extract the source in the location
