--- a/IDP-ASE/IDP-ASE.html
+++ b/IDP-ASE/IDP-ASE.html
@@ -68,7 +68,7 @@
     <h2>Downloads</h2>
     <p>
     Copyright and installation instructions are contained within the package. We <b>strongly
-    recommend</b> that you consult the <a href="IDP-ASE-tutorial.html">tutorial</a> before attempting to use IDP. 
+    recommend</b> that you consult the <a href="IDP-ASE_tutorial.html">tutorial</a> before attempting to use IDP. 
     </p>
         
     <table border="1" cellpadding="1">
