--- a/IDP-fusion/IDP-fusion_manual.html
+++ b/IDP-fusion/IDP-fusion_manual.html
@@ -68,19 +68,19 @@
   <div id="content">
     <h2>Manual</h2>
     <ul>
-    <li><a href="IDP_manual.html#install">Installation</a></li>
-    <li><a href="IDP_manual.html#using">Using IDP</a></li>
+    <li><a href="IDP-fusion_manual.html#install">Installation</a></li>
+    <li><a href="IDP-fusion_manual.html#using">Using IDP</a></li>
     <li>Module descriptions
     <ul>
-        <li><a href="IDP_manual.html#runIDP">runIDP.py</a></li>
+        <li><a href="IDP-fusion_manual.html#runIDP">runIDP.py</a></li>
     </ul>
     </li><li>Input files</li>
     <ul>
-        <li><a href="IDP_manual.html#longreads">Long reads</a></li>
-		<li><a href="IDP_manual.html#shortreads">Short reads</a></li>
+        <li><a href="IDP-fusion_manual.html#longreads">Long reads</a></li>
+		<li><a href="IDP-fusion_manual.html#shortreads">Short reads</a></li>
     </ul>	
-    </li><li><a href="IDP_manual.html#output">Output files</a></li>
-    <li><a href="IDP_manual.html#time">Execution Time</a></li>
+    </li><li><a href="IDP-fusion_manual.html#output">Output files</a></li>
+    <li><a href="IDP-fusion_manual.html#time">Execution Time</a></li>
     </ul>
     
     <div id="install">
