--- a/labmembers/labmembers.html
+++ b/labmembers/labmembers.html
@@ -101,12 +101,6 @@
       </ul>
     </td>
   </tr>
-
-
-
-
-
-
  
 
    <tr>
@@ -118,7 +112,16 @@
   <b>Post-Doc</b>
                 <br><a href="https://medicine.osu.edu/bmi/">Department of Biomedical Informatics</a> 
     <br>Joined Lab in 2015
+        
+           <tr>
+    <td valign="top"><img src="images/meng2016.jpg" width="140" ></td>
+    <td valign="top">
+          <h1>Meng Zou</h1><br>
+      <ul>
 
+  <b>Post-Doc</b>
+                <br><a href="https://medicine.osu.edu/bmi/">Department of Biomedical Informatics</a> 
+    <br>Joined Lab in 2016
 
       </ul>
     </td>
@@ -133,7 +136,6 @@
   <b>Post-Doc</b>
         <br><a href="https://medicine.osu.edu/bmi/">Department of Biomedical Informatics</a> 
     <br>Joined Lab in 2019
-
 
       </ul>
     </td>
@@ -195,7 +197,6 @@
   
  <li>Jason Weirather, Post-doc (2014-2017)</li>
  <li>Yingke Ma, Post-doc (2015-2016)</li>
-<li>Meng Zou, Post-doc (2016-2017)</li>
 <li>Andrew Thurman, Post-doc (2016-2018)</li>
 <li>Shuhua Fu, Post-doc (2015-2018)</li>
 <li>Diana (Yue) Zhao, Post-doc(2015-2018)</li>
