--- a/labmembers/labmembers.html
+++ b/labmembers/labmembers.html
@@ -147,7 +147,7 @@
           <h1>Dingjie Wang</h1><br>
       <ul>
 
-  <b>PhD Student</b>
+  <b>Post-Doc</b>
                 <br><a href="https://medicine.osu.edu/bmi/">Department of Biomedical Informatics</a> 
     <br>Joined Lab in 2017
 
