--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 </p>
 </div>
 <table> 
-	<tr><td>Genome-wide chromatin accessibility and nucleosome occupancy profiles have been widely investigated, while the long-range dynamics remains poorly studied at the single-cell level. Here we present a new experimental approach MeSMLR-seq (methyltransferase treatment followed by single-molecule long-read sequencing) for long-range mapping of nucleosomes and chromatin accessibility at single DNA molecules, and thus achieve comprehensive-coverage characterization of the corresponding heterogeneity. MeSMLR-seq offers direct measurements of both nucleosome-occupied and nucleosome-evicted regions on a single DNA molecule, which is challenging for many existing methods. We applied MeSMLR-seq to haploid yeast, where single DNA molecules represent single cells, and thus we could investigate the combinatorics of many (up to 356) nucleosomes at long range in single cells. We illustrated the differential organization principles of nucleosomes surrounding the transcription start site for silently- and actively-transcribed genes, at the single-cell level and in the long-range scale... 
+	<tr><td>Combining methyltransferase treatment with nanopore sequencing, Wang et al. developed a new experimental approach “MeSMLR-seq” to map nucleosome occupancy and chromatin accessibility at single long DNA molecules. MeSMLR-seq shows consistent bulk-cell results with existing methods (e.g. MNase-seq and ATAC-seq), but more importantly it brings unprecedented power to capture the single-molecule epigenome. Thus, epigenome heterogeneity can be clearly resolved and subtle but meaningful epigenome differences at single molecules can be discovered. For instance, the MeSMLR-seq data provided the quantitative evidence for the correlation between promoter accessibility and transcription activity. The MeSMLR-seq long reads phased >300 nucleosomes and identified chromatin accessibility of up to 40 adjacent genes simultaneously at single molecules - e.g. the MeSMLR-seq data revealed the coupled chromatin status changes of the adjacent glucose transporter genes responding to the glucose concentration changes. It shows potential to study the association of multiple layers of epigenomes, including base modifications at the same molecules. 
 </td>
 	<td><img src="images/F1.medium.gif" width="200"></td></tr> 
 </table> 
@@ -205,29 +205,7 @@
     	<br>
     </p>
 
-	<h2>Collaborators</h2>
-	Currently, we have very close ongoing collobrations with: 
-	<ul><a href="http://www.stanford.edu/group/wonglab/">Wing H. Wong's Lab</a> at Stanford<br>
-	<a href="http://www.pacificbiosciences.com/">Pacific Biosciences (PacBio)</a><br>
-	<a href="http://www.binatechnologies.com/">Bina Technologies</a><br>
-	<a href="http://stemcellphd.stanford.edu/faculty/renee-reijo-pera.html">Renee Reijo Pera's Lab</a> at Stanford<br>
-    <a href="http://www.houstonmethodist.org/wing-tak-jack-wong-phd">Jack H. Wong's Lab</a> at Houston Methodist Research Institute<br>
-    <a href="http://stemcellphd.stanford.edu/faculty/vittorio-sebastiano.html">Vittorio Sebastiano's Lab</a> at Stanford<br>
-    <a href="http://www.well.ox.ac.uk/ogc/about-ogc">David Buck and the Oxford Genomics Centre</a> at the Wellcome Trust Centre for Human Genetics<br>
-<a href="http://omicslab.genetics.ac.cn/index_en.php/">Xiujie Wang's Lab</a> at Beijing Institute of Genomics, Chinese Academy of Sciences<br>
 
-
-<a href="http://sourcedb.big.cas.cn/yw/pl/fs/BIG_GPM/200907/t20090724_2194398.html">Yungui Yang's Lab</a> at Institute for Genetics and Developmental Biology, Chinese Academy of Sciences<br>
-
-<a href="https://zhaohua.urmc.rochester.edu/">Xin Zhiguo Li's Lab</a> at University of Rochester<br>
-
-
-
-    </ul>
-
-    <p>
-    	<br>
-    </p>
 
     <h2>News</h2>
     <div>
