--- a/Publications/Publications.html
+++ b/Publications/Publications.html
@@ -53,6 +53,13 @@
   <div id="content">
 
   <h1>Publications</h1>
+
+<p>
+  <br><b>iASPP mediates p53 selectivity through a modularmechanism fine-tuning DNA recognition</b><br>
+  Chen, S., Wu, J., Zhong, S., Li, Y., Zhang P., Ma, J., Ren, J., Tan, Y., <b><a>Wang, Y.</a></b>, <b><a>Au, K.F.</a></b>, Siebold, C., Bond, G.L., Chen, Z., Lu, M., Jones, E.Y. and Lu, X.
+  <br><i>Proc. Natl. Acad. Sci. USA</i> 2019 Aug 27. 116 (35), 17470-17479 [<a href="https://www.pnas.org/content/116/35/17470">Manuscript</a>] 
+  </p>	  	
+<p>
 	  	
 <p>
   <br><b>Single-molecule long-read sequencing reveals the chromatin basis of gene expression.</b><br>
