--- a/labmembers/labmembers.html
+++ b/labmembers/labmembers.html
@@ -82,25 +82,6 @@
     </td>
   </tr>
 
-
-  
-
-   
-
-   <tr>
-    <td valign="top"><img src="images/anqi2016.jpg" width="140" ></td>
-    <td valign="top">
-          <h1>Anqi Wang</h1><br>
-      <ul>
-
-  <b>Post-Doc</b>
-            <br><a href="https://medicine.osu.edu/bmi/">Department of Biomedical Informatics</a> 
-    <br>Joined Lab in 2016
-
-
-      </ul>
-    </td>
-  </tr>
  
 
    <tr>
@@ -232,7 +213,8 @@
  <li>Yingke Ma, Post-doc (2015-2016)</li>
 <li>Andrew Thurman, Post-doc (2016-2018)</li>
 <li>Shuhua Fu, Post-doc (2015-2018)</li>
-<li>Diana (Yue) Zhao, Post-doc(2015-2018)</li>
+<li>Diana (Yue) Zhao, Post-doc (2015-2018)</li>
+<li>Anqi Wang, Post-doc (2016-2019)</li>
 <br>
 <li>Benjamin Deonovic, Ph.D. student (2014-2017)</li>
 <li>Adam Hefel, Ph.D. rotation student (2015-2016)</li>
