--- a/Publications/Publications.html
+++ b/Publications/Publications.html
@@ -55,6 +55,13 @@
   <h1>Publications</h1>
 
 <p>
+  <br><b>Performance difference of graph-based and alignment-based hybriderror correction methods for error-prone long reads.</b><br>
+  <b><a>Wang, A.</a></b>, <b><a>Au, K.F.</a></b>.
+  <br><i>Genome Biology.</i> Accepted on 11/10/2019.  
+  </p>	  	
+<p>
+
+<p>
   <br><b>iASPP mediates p53 selectivity through a modularmechanism fine-tuning DNA recognition</b><br>
   Chen, S., Wu, J., Zhong, S., Li, Y., Zhang P., Ma, J., Ren, J., Tan, Y., <b><a>Wang, Y.</a></b>, <b><a>Au, K.F.</a></b>, Siebold, C., Bond, G.L., Chen, Z., Lu, M., Jones, E.Y. and Lu, X.
   <br><i>Proc. Natl. Acad. Sci. USA</i> 2019 Aug 27. 116 (35), 17470-17479 [<a href="https://www.pnas.org/content/116/35/17470">Manuscript</a>] 
