--- a/Publications/Publications.html
+++ b/Publications/Publications.html
@@ -56,7 +56,7 @@
 
 <p>
   <br><b>Performance difference of graph-based and alignment-based hybriderror correction methods for error-prone long reads.</b><br>
-  <b><a>Wang, A.</a></b>, <b><a>Au, K.F.</a></b>.
+  <b><a>Wang, A.</a></b>, <b><a>Au, K.F.</a></b>
   <br><i>Genome Biology.</i> Accepted on 11/10/2019.  
   </p>	  	
 <p>
