--- a/index.html
+++ b/index.html
@@ -202,6 +202,19 @@
 	<td><img src="images/IDP-denovo.png" width="300"></td></tr> 
 </table> 	
 
+<br>
+<div>
+ <p><b>Nanopore Community Meeting: Single-molecule long-read sequencing reveals the chromatin basis of gene expression.</b>
+<br> Audrey Bollas, 2019.
+<br>
+</p>
+</div>
+<table> 
+	<tr><td> </td>
+	<td><img src="images/5871575635906_.jpg" width="320"></td></tr> 
+</table> 		
+	
+	
 <p>
     	<br>
     </p>
