--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 <br>
 <div>
  <p><b>Nanopore Community Meeting: Single-molecule long-read sequencing reveals the chromatin basis of gene expression.</b>
-<br> Audrey Bollas, 2019.
+<br> Audrey Bollas, 2019. Oops!
 <br>
 </p>
 </div>
