--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
 
 </p>
 
-<h2>News: Our latest paper of identifying nucleosome occupancy and chromatin accessibility on single DNA molecule is selected as the cover of the August Issue of Genome Research.</h2> </p>
+<h2>News </h2> </p>
+<h2>Our latest paper of identifying nucleosome occupancy and chromatin accessibility on single DNA molecule is selected as the cover of the August Issue of Genome Research.</h2></p>
 	
 <div><img src="images/CR.jpg" width="50" style='float: left;'/>
  <p><b>Single-molecule long-read sequencing reveals the chromatin basis of gene expression.</b>
