--- a/index.html
+++ b/index.html
@@ -53,8 +53,20 @@
 
 </p>
 
-<h2>News </h2> </p>
-<h2>Our latest paper of identifying nucleosome occupancy and chromatin accessibility on single DNA molecule is selected as the cover of the August Issue of Genome Research.</h2></p>
+<p><h2>News </h2> </p>
+
+<h3><img src="images/dna.png">Audrey presents our recent work at the Nanopore Community Meeting 2019. </h3></p>
+<p><b>Talk title: Single-molecule long-read sequencing reveals the chromatin basis of gene expression.</b></p>
+</div>
+<table> 
+	
+	<tr><td>Our genome has different levels of organization, and at the nucleosome level, DNA strands wrap around protein cores like beads on a string. Positioning of these nucleosomes and changes in chromatin status play important regulatory roles in gene expression. Our new method, MeSMLR-seq, aims to resolve the long-range dynamics that remain poorly understood at the single-molecule level. Briefly, two examples from the paper in Genome Research are discussed: 1) MeSMLR-seq can resolve differential nucleosome organization principles at the transcription start site of silent versus active genes; and 2) MeSMLR-seq can explore the coupled chromatin status of adjacent genes during transcriptional reprogramming. These methods offer promising utility to study multiple layers of epigenetics simultaneously.
+</td>
+	<td><img src="images/5871575635906_.jpg" width="200"></td></tr> 
+</table> 
+<br>	
+	
+<h3><img src="images/dna.png">Our latest paper of identifying nucleosome occupancy and chromatin accessibility on single DNA molecule is selected as the cover of the August Issue of Genome Research.</h3></p>
 	
 <div><img src="images/CR.jpg" width="50" style='float: left;'/>
  <p><b>Single-molecule long-read sequencing reveals the chromatin basis of gene expression.</b>
@@ -69,6 +81,8 @@
 	<td><img src="images/F1.medium.gif" width="150"></td></tr> 
 </table> 
 <br>
+
+
 	   
 
 	<h2>Research Focus</h2> </p>
