--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 </p>
 
-<p><h2>News </h2> </p>
+<h2>News </h2> </p>
 
 <h3><img src="images/dna.png">Audrey presents our recent work at the Nanopore Community Meeting 2019. </h3></p>
 <p><b>Talk title: Single-molecule long-read sequencing reveals the chromatin basis of gene expression.</b></p>
