add link to video

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <h2>News </h2> </p>
 
 <h3><img src="images/dna.png">Audrey presents our recent work at the Nanopore Community Meeting 2019. </h3></p>
-<div><p><b>Talk title: Single-molecule long-read sequencing reveals the chromatin basis of gene expression.</b></p>
+<div><p><b>Talk title: Single-molecule long-read sequencing reveals the chromatin basis of gene expression.</b> [<a href="https://nanoporetech.com/resource-centre/single-molecule-long-read-sequencing-reveals-chromatin-basis-gene-expression-0?ite=17668&ito=1641&itq=acb09df6-2c01-4122-90ec-a5b547959682&itx%5Bidio%5D=624930">Video</a>] </p>
 </div>
 <table> 
 	
