link download to github page

--- a/IDP/IDP_download_current.html
+++ b/IDP/IDP_download_current.html
@@ -73,7 +73,7 @@
     <table border="1" cellpadding="1">
     <tr>
     <td>
-    <a href="files/IDP_0.1.9.tar.gz"  onClick="ga('send', 'event', 'file download', 'click', 'IDP download release');"><img src="images/download.png"><b>IDP 0.1.9</b></a>
+    <a href="https://github.com/Dingjie-Wang/Manual-for-running-IDP-pipeline"><img src="images/download.png"><b>IDP 0.1.9</b></a>
     </td>
      <td>
     Please see the <a href="IDP_download_current.html#notes">release notes</a> for 
